--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com.github.t1</groupId>
         <artifactId>problem-details</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7-SNAPSHOT</version>
     </parent>
 
     <artifactId>problem-details-api</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
     <description>Problem Detail API</description>
 
     <properties>
