--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details-spring-test</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
     <description>Problem Detail test suite for Spring Boot</description>
 
     <properties>
@@ -68,12 +68,12 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-ri-spring</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.7-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -109,8 +109,4 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-  <scm>
-    <tag>1.0.6</tag>
-  </scm>
 </project>
