--- a/ri-lib/pom.xml
+++ b/ri-lib/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.2.0</version>
+            <version>3.2.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -115,8 +115,8 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.9.3.Final</version>
+            <artifactId>resteasy-core</artifactId>
+            <version>4.4.1.Final</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
