--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -117,13 +117,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.2.0</version>
+            <version>3.2.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.9.3.Final</version>
+            <artifactId>resteasy-core</artifactId>
+            <version>4.4.1.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
