--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -122,8 +122,8 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-core</artifactId>
-            <version>4.4.1.Final</version>
+            <artifactId>resteasy-core-spi</artifactId>
+            <version>4.4.2.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
