--- a/test/pom.xml
+++ b/test/pom.xml
@@ -23,7 +23,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <slf4j.version>1.7.29</slf4j.version>
-        <resteasy.version>4.4.1.Final</resteasy.version>
+        <resteasy.version>4.4.2.Final</resteasy.version>
     </properties>
 
     <repositories>
@@ -121,7 +121,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-core</artifactId>
+            <artifactId>resteasy-core-spi</artifactId>
             <version>${resteasy.version}</version>
             <scope>test</scope>
         </dependency>
