--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,3 +15,16 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: mvn -B verify
+
+  openliberty-IT:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Maven
+      run: mvn -B verify -Djee-testcontainer=open-liberty:19.0.0.9-javaee8-java11 -Pwith-slf4j
