--- a/ri/pom.xml
+++ b/ri/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>problem-details-ri</artifactId>
     <version>1.1.0-SNAPSHOT</version>
-    <description>A dummy implementation using an ExceptionMapper, i.e. an incomplete implementation</description>
+    <description>An implementation for JAX-RS using an ExceptionMapper</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -33,6 +33,28 @@
                         <include>*Behavior</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <id>build ADR TOC</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>adr</executable>
+                            <arguments>
+                                <argument>generate</argument>
+                                <argument>toc</argument>
+                            </arguments>
+                            <outputFile>doc/adr/toc.md</outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
