--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,10 +3,8 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
-
+  wildfly:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 11
@@ -14,12 +12,10 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B verify
+      run: mvn --batch-mode verify -Djee-testcontainer=wildfly
 
-  openliberty-IT:
-
+  openliberty:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 11
@@ -27,12 +23,10 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B verify -Djee-testcontainer=open-liberty:19.0.0.9-javaee8-java11 -Pwith-slf4j
+      run: mvn --batch-mode verify -Djee-testcontainer=open-liberty:19.0.0.9-javaee8-java11 -Pwith-slf4j
 
-  payara-IT:
-
+  payara:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 11
@@ -40,4 +34,15 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B verify -Djee-testcontainer=payara -Pwith-slf4j
+      run: mvn --batch-mode verify -Djee-testcontainer=payara -Pwith-slf4j
+
+  tomee:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Maven
+      run: mvn --batch-mode verify -Djee-testcontainer=tomee
