--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,13 +36,13 @@ jobs:
     - name: Build with Maven
       run: mvn --batch-mode verify -Djee-testcontainer=payara -Pwith-slf4j
 
-  tomee:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - name: Build with Maven
-      run: mvn --batch-mode verify -Djee-testcontainer=tomee
+#  tomee:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v1
+#    - name: Set up JDK 11
+#      uses: actions/setup-java@v1
+#      with:
+#        java-version: 11
+#    - name: Build with Maven
+#      run: mvn --batch-mode verify -Djee-testcontainer=tomee
