--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Build with Maven
       run: mvn --batch-mode verify -Djee-testcontainer=payara -Pwith-slf4j
 
+# TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
 #  tomee:
 #    runs-on: ubuntu-latest
 #    steps:
