--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
     <repositories>
         <repository>
-            <id>bintray</id>
-            <name>bintray</name>
-            <url>http://jcenter.bintray.com</url>
+            <id>jcenter</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com</url>
         </repository>
         <repository>
             <id>bintray-t1-javaee-helpers</id>
