--- a/ri-demo/pom.xml
+++ b/ri-demo/pom.xml
@@ -178,7 +178,7 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>jee-testcontainers</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.4.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
