--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,23 +3,34 @@ name: Java CI
 on: [push]
 
 jobs:
+  build-mp:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/upload-artifact@v1
+      with:
+        name: mp-problemdetails
+        path: ~/.m2/repository/io/microprofile/sandbox/
+
   build:
     strategy:
       matrix:
         container:
         - wildfly
-        - payara
-        - open-liberty:19.0.0.9-javaee8-java11
-        # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
-        #- tomee
+#        - payara
+#        - open-liberty:19.0.0.9-javaee8-java11
+        #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
 
     runs-on: ubuntu-latest
+    needs: build-mp
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK ${{ matrix.jdk }}
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.jdk }}
+    - uses: actions/download-artifact@v1
+      with:
+        name: mp-problemdetails
     - name: Build with Maven
       run: mvn --batch-mode verify -Djee-testcontainer=${{ matrix.container }}
