--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,8 +12,9 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 8
-    - run: cd proposals/problem-details
-    - run: mvn --batch-mode verify -Djee-testcontainer=${{ matrix.container }}
+    - run: |
+        cd proposals/problem-details
+        mvn --batch-mode install
     - uses: actions/upload-artifact@v1
       with:
         name: mp-problemdetails
@@ -24,8 +25,8 @@ jobs:
       matrix:
         container:
         - wildfly
-#        - payara
-#        - open-liberty:19.0.0.9-javaee8-java11
+        #        - payara
+        #        - open-liberty:19.0.0.9-javaee8-java11
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
 
