--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
         jdk: [8, 11]
 
     runs-on: ubuntu-latest
-    needs: build-microprofile
+    needs: build-microprofile-artifacts
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK ${{ matrix.jdk }}
