--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,8 @@ jobs:
       matrix:
         container:
         - wildfly
-        #- payara
-        #- open-liberty:19.0.0.9-javaee8-java11
+        - open-liberty:full
+        #- payara # TODO Payara run with Microprofile support
         #- tomee # TODO TomEE enable when fixed https://github.com/t1/problem-details/issues/17
         jdk: [8, 11]
 
