--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details-spring-test</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9-SNAPSHOT</version>
     <description>Problem Detail test suite for Spring Boot</description>
     <url>https://github.com/t1/problem-details</url>
 
@@ -45,7 +45,7 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <tag>1.0.8</tag>
+        <tag>HEAD</tag>
         <developerConnection>scm:git:https://github.com/t1/problem-details.git</developerConnection>
         <url>https://github.com/t1/problem-details.git</url>
     </scm>
@@ -139,12 +139,12 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-ri-spring</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.9-SNAPSHOT</version>
         </dependency>
 
         <dependency>
