--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,9 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v3
       with:
         java-version: 11
-    - name: Build with Maven
-      run: mvn -B verify
+        distribution: 'temurin'
+        cache: 'maven'
+    - run: mvn -B verify
