--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
         <snakeyaml.version>1.28</snakeyaml.version>
         <hibernate.version>6.2.0.Final</hibernate.version>
 
-        <assertj.version>3.19.0</assertj.version>
-        <junit.version>5.7.1</junit.version>
-        <mockito.version>3.8.0</mockito.version>
-        <jee-testcontainers.version>1.5.6</jee-testcontainers.version>
+        <assertj.version>3.22.0</assertj.version>
+        <junit.version>5.8.2</junit.version>
+        <mockito.version>4.3.1</mockito.version>
+        <jee-testcontainers.version>1.7.4</jee-testcontainers.version>
     </properties>
 
     <developers>
@@ -38,7 +38,7 @@
     <licenses>
         <license>
             <name>Apache License 2.0</name>
-            <url>http://choosealicense.com/licenses/apache-2.0/</url>
+            <url>https://choosealicense.com/licenses/apache-2.0/</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -159,8 +159,9 @@
                     <!-- always run source+javadoc => see problems early & source available in local repo -->
                     <plugin>
                         <!-- but don't run gpg everywhere, esp. not in github actions -->
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
